0120 6시 최종 병합본

--- a/src/main/resources/templates/views/diary/diaryList.html
+++ b/src/main/resources/templates/views/diary/diaryList.html
@@ -95,7 +95,7 @@
                 
                 <div class="index-tabs">
                     <div class="tab">Diary List</div>
-                    <div class="tab" style="background: #e1f5fe; color: #90caf9;">Friends</div>
+                    <div class="tab" style="background: #e1f5fe; color: #90caf9;"></div>
                 </div>
 
                 <div class="sidebar">
