병원 추가 폼 수정

--- a/src/main/resources/templates/views/hospital/writeHospital.html
+++ b/src/main/resources/templates/views/hospital/writeHospital.html
@@ -6,8 +6,6 @@
 <meta charset="UTF-8">
 <title>병원 메인페이지</title>
 <link rel="stylesheet" th:href="@{/css/writeHospital.css}" />
-<script src=
-	"https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
  <th:block layout:fragment="content">
@@ -38,17 +36,11 @@
 					</div>
 					<div class="row my-3">
 	                    <div class="col-8 offset-md-2">
-	                        <label for="address" class="form-label">병원 우편 주소</label>
-	                        <div class="row">
-								<div class="col-4">
-									<input type="text" class="form-control" name="zipcode" id="zipcode" maxlength="5" readonly>
-								</div>
-								<div class="col-4">
-									<input type="button" class="btn btn-outline-success" id="btnZipcode" value="우편번호 찾기">
-								</div>
+	                        <label for="address" class="form-label">병원 주소</label>
+								<input type="text" class="form-control" name="zipcode" id="zipcode" maxlength="5" readonly
+								placeholder = "주소를 상세하게 기입해주세요 예 ) 서울특별시 마포구 신촌로 16 ">
 							</div>
 	                    </div>
-                    </div>
 					<div class="row my-3">
 	                    <div class="col-8 offset-md-2">
 	                        <label for="mobile2" class="form-label">전화번호</label>
