--- a/src/main/resources/templates/views/hospital/writeHospital.html
+++ b/src/main/resources/templates/views/hospital/writeHospital.html
@@ -38,7 +38,7 @@
 	                    <div class="col-8 offset-md-2">
 	                        <label for="address" class="form-label">병원 주소</label>
 								<input type="text" class="form-control" name="zipcode" id="zipcode" maxlength="5" readonly
-								placeholder = "주소를 상세하게 기입해주세요 예 ) 서울특별시 마포구 신촌로 16 ">
+								placeholder = "도로명 주소를 기입해주세요 예 ) 서울특별시 마포구 신촌로 16 ">
 							</div>
 	                    </div>
 					<div class="row my-3">
