일기장 수정완료js

--- a/src/main/resources/templates/views/diary/diaryDetail.html
+++ b/src/main/resources/templates/views/diary/diaryDetail.html
@@ -11,6 +11,12 @@
             --point-blue: #90caf9;
             --text-brown: #455a64;
         }
+        
+        /* ✅ 배경색을 헤더까지 전체 적용 */
+        body {
+            background-color: #f0f7ff !important;
+        }
+        
 
         .diary-wrapper {
             background-color: #f0f7ff; padding: 40px 0; min-height: 100vh;
@@ -61,7 +67,6 @@
         /* 오른쪽 메인 영역 */
         .main-content {
             width: 68%; padding: 60px; position: relative;
-            background-image: url('https://www.transparenttextures.com/patterns/cubes.png'); /* 은은한 패턴 */
         }
 
         /* ☁️ 구름 모양 제목 영역 */
