병원 추가 기능 구현 완료

--- a/src/main/resources/templates/views/hospital/writeHospital.html
+++ b/src/main/resources/templates/views/hospital/writeHospital.html
@@ -36,8 +36,8 @@
 					</div>
 					<div class="row my-3">
 	                    <div class="col-8 offset-md-2">
-	                        <label for="address" class="form-label">병원 주소</label>
-								<input type="text" class="form-control" name="zipcode" id="zipcode" maxlength="5" readonly
+	                        <label for="address" class="form-label">병원 도로명 주소</label>
+								<input type="text" class="form-control" name="address" id="address" 
 								placeholder = "도로명 주소를 기입해주세요 예 ) 서울특별시 마포구 신촌로 16 ">
 							</div>
 	                    </div>
@@ -87,7 +87,7 @@
             </div>
         </div>
     </div>
-    <script th:src="@{/js/writeHospital.js}"></script>
+    <script th:src="@{/js/hospital.js}"></script>
 </th:block>
 </body>
 </html>
